--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -17,3 +17,10 @@ $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+
+
+.big-checkbox  > input {width: 20px; height: 20px;}
+
+.delete-button {
+    position: absolute; top: 4px; right: 5px; cursor: pointer;
+}
